test/error/missing_endmodule_1.sv
// pattern: missing expected `endmodule`
module foo;
